add margin to button, validate dto