@@ -9,8 +9,6 @@ import lombok.Getter;
 import lombok.Setter;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 @JsonSerialize
@@ -51,7 +49,7 @@ public class TopicMetadata implements HasKey {
 
     private MessagesSize messagesSize;
 
-    private List<String> producers = Collections.unmodifiableList(new ArrayList<>());
+    private List<String> producers = List.of();
 
     public TopicMetadata() {
     }
